# lab

./: .gitignore  README.md
DVC_example/: README.md
DVC_exmple2/: .gitignore  mise.toml  pyproject.toml
DVC_exmple2/.devcontainer/: Dockerfile  devcontainer.json
DVC_exmple2/scripts/: setup
bash/compare-files/: compare-files.md  text-b.txt  text-c.txt
bash/data-cleaning/: .bash_preprocessing_guide.md.swp  bash_preprocessing_guide.md  bash_vs_python_comparison.md  check_exercises.sh  laptop-sales.csv  sales_data_raw.csv  test_data.csv
bash/pattern/: ip.txt
container/pyproject/.devcontainer/: Dockerfile  devcontainer.json
container/pyproject/scripts/: install_torch.sh  setup
kubernetes/deployments/: creat_pod.md  deploy-recreate.yaml  deploy.yaml  frontend.yaml  nginx-volume.yaml
kubernetes/mealie/: deploy.yaml  deploy_mealie.yaml  service.yaml
kubernetes/monitoring/: loadbalancer.yaml  prometheus-default-values.yaml  values.yaml
kubernetes/pod-as-yaml/: deploy.yaml  nginx.yaml
python/fastapi/: pydantic-val.py  pyproject.toml  test_mock.py  test_server.py  test_test.py
python/fastapi/.devcontainer/: Dockerfile  devcontainer.json
python/fastapi/drift/: detector.py
python/fastapi/scripts/: install_torch.sh  setup
python/fastapi/serve/: app.py
python/spyder/: pyproject.toml  setup-env.sh
tensorRT/: load_model.py  load_onnx_model.py  pyproject.toml  rf_classifier.onnx  rf_classifier.onnx.data  rf_classifier.ts  tesorRT_comparisons.py
tensorRT/.devcontainer/: Dockerfile  devcontainer.json
tensorRT/scripts/: install_torch.sh  setup
